# aws-cli-manager

./: README.md  pyproject.toml
app/: app.py
app/test-directory/source/profile-1/: config.txt  credentials
app/test-directory/source/profile-2/: config.txt  credentials
shell_scripts/: profile-1.sh
