[tool.poetry]
name = "aws-cli-manager"
version = "0.1.0"
description = "A python utility to organize AWS profiles."
authors = ["Aveek Das <aveek.d22@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
argparse = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
